--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -1,4 +1,5 @@
 
 TODO:
 
-+ Hacer el layout de cuando se clica la foto 
++ Hacer el layout de cuando se clica la foto
++ Investigar sobre que es mejor: que la foto que sube aparezca en un imageview o en un imagebutton
