--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_profile">Profile</string>
+    <string name="photographer">Photographer: </string>
+    <string name="location">Location: </string>
+    <string name="category">Category: </string>
+    <string name="title">Title: </string>
 </resources>
