Ventana "Profile" semi-acabada
Faltan Grid de fotos y ventana de "Logros"

--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -1,4 +1,6 @@
 
 TODO:
 
-    - Poner a visible false cuando estemos en otros fragments las opciones de la barra superior
+    - Pop-up "filtros"
+    - Ventana "logros"
+    - Gridview con las fotis
