Grid Profile implementado
Ahora mismo funciona con una imagen por default que se rellena con un for. Esto tendremos que cambiarlo cuando obtengamos las imagenes de firebase

--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -4,3 +4,5 @@ TODO:
     - Pop-up "filtros"
     - Ventana "logros"
     - Gridview con las fotis
+        + No se puede implementar esto hasta que tengamos la lógica del firebase, ya que sacaremos
+          las imagenes de ahí (imagino)
