Primera versión del popup filter implementado
Además:
+ Borrado el oldCustomNavigation porque no se estaba utilizando
+ Modificado el TODO

--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -1,8 +1,10 @@
 
 TODO:
 
-    - Pop-up "filtros"
+    - Ventana filtros
+        + Añadirle un search
+        + Que el título de las categorias se coja de values/strings
+        + Añadirles ids a las categorias del menu
+        + Tendremos que hacerla custom, para tener más control que con el PopUpMenu default de
+          android
     - Ventana "logros"
-    - Gridview con las fotis
-        + No se puede implementar esto hasta que tengamos la lógica del firebase, ya que sacaremos
-          las imagenes de ahí (imagino)
