Moficado el TODO

--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -2,7 +2,7 @@
 TODO:
 
     - Ventana filtros
-        + Añadirle un search
+        + Añadirle un search (?)
         + Que el título de las categorias se coja de values/strings
         + Añadirles ids a las categorias del menu
         + Tendremos que hacerla custom, para tener más control que con el PopUpMenu default de
