--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -7,4 +7,6 @@ TODO:
         + Añadirles ids a las categorias del menu
         + Tendremos que hacerla custom, para tener más control que con el PopUpMenu default de
           android
-    - Ventana "logros"
+
+    - Grid view
+        + La imagen solo se clica si le das a un lado (parte blanca), esto hay que arreglarlo
