Login and Create account done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">SnapRank</string>
-    <string name="title_home">Home</string>
-    <string name="title_search">Search</string>
-    <string name="title_profile">Profile</string>
+    <string name="title_home">Inicio</string>
+    <string name="title_search">Buscar</string>
+    <string name="title_profile">Perfil</string>
+    <string name="email">Correo electrónico</string>
+    <string name="password">Contraseña</string>
+    <string name="confirm_password">Confirmar contraseña</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="register">Crear cuenta</string>
+    <string name="action_logout">Cerrar sesión</string>
+    <string name="logout_message">¿Está seguro de que desea cerrar sesión?</string>
+
+    <string name="yes">Sí</string>
+    <string name="no">No</string>
 </resources>
