Username added to create account form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_search">Buscar</string>
     <string name="title_profile">Perfil</string>
     <string name="email">Correo electrónico</string>
+    <string name="username">Usuario</string>
     <string name="password">Contraseña</string>
     <string name="confirm_password">Confirmar contraseña</string>
     <string name="login">Iniciar sesión</string>
