Everything working after merge

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,6 +18,9 @@
     <string name="category">Category: </string>
     <string name="title">Title: </string>
 
+    <string name="logro_categoria">Category: </string>
+    <string name="logro_fecha_desbloqueo">Month: </string>
+
     <string name="yes">Yes</string>
     <string name="no">No</string>
 </resources>
