Cambio de LinearLayout por CardView en la "bio" del ProfileFragment

--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -9,3 +9,7 @@ TODO:
     - Lógica de la app
 
     - Modificar color navigation bar
+
+    - Centrar el texto en el ViewPicActivity
+
+    - Cambiar el profile para que sea CardView en vez de LinearLayout
