--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -1,15 +1,11 @@
 
 TODO:
 
-    - Organizar las clases/carpetas.
-
     - Activity opciones/ajustes:
         + Para editar profile pic, name, passw...
 
     - Lógica de la app
 
-    - Modificar color navigation bar
+    - Modificar color navigation bar (LA MIERDA VERDE)***
 
-    - Centrar el texto en el ViewPicActivity
-
-    - Cambiar el profile para que sea CardView en vez de LinearLayout
+    - Centrar el texto en el ViewPicActivity ***
