--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,4 +24,26 @@
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
+
+    <string name="select_photo">Choose image</string>
+    <string name="upload_photo">Upload photo</string>
+
+    <string name="image_description">Description</string>
+    <string name="image_location">Location</string>
+
+    <string name="mountain">Mountain</string>
+    <string name="sea">Sea</string>
+    <string name="planets">Planets y satellites</string>
+    <string name="friends">Friends</string>
+    <string name="animals">Animals</string>
+    <string name="streets">Streets</string>
+    <string name="vehicles">Vehicles</string>
+    <string name="food">Food</string>
+    <string name="people">People</string>
+    <string name="music">Music</string>
+    <string name="festivals">Festivals</string>
+    <string name="culture">Culture</string>
+
+    <string name="success_upload_photo">Image correctly uploaded</string>
+    <string name="permissions_denied_message">You need the permissions to make full use of the application</string>
 </resources>
