--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -14,5 +14,8 @@ TODO:
 
     COSAS IMPORTANTES DE LA ÚLTIMA SESIÓN:
 
-    - Arreglar el imagenSubidaAdapter, para obtener la imagen del firestorage
     - Averiguar otras implementaciones de imagenSubida para ver si da fallos
+        + Al implementar la lógica del view fragment hay que pasar el url de la imagen que hace se ve, para que no
+          falle la clase ViewPic
+    - Pasar un budle con el ImagenSubida para rellenar los distintos textviews de ViewPic
+    - Implementar threads para que funcionen mejor las cosas que se sacan de la base de datos
