--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -4,8 +4,6 @@ TODO:
     - Activity opciones/ajustes:
         + Para editar profile pic, name, passw...
 
-    - Lógica de la app
-
     - Desde ViewPic al clicar fotógrafo que te lleve al perfil !!!!
 
     - Modificar grid para que haya menos espacio entre columnas y quizá solo 3 columnas
@@ -22,3 +20,4 @@ TODO:
     - Coque achatado ????
     - Logros cambiarlo para que ponga si es premio a foto o a user???
 
+    - Doble click en Perfil antes de que carguen las fotos ---> peta
