--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,6 +31,7 @@
     <string name="image_description">Description</string>
     <string name="image_location">Location</string>
 
+    <string name="all">All</string>
     <string name="mountain">Mountain</string>
     <string name="sea">Sea</string>
     <string name="planets">Planets y satellites</string>
