--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,4 +24,5 @@
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="title_ranking">Ranking</string>
 </resources>
