--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SnapRank</string>
     <string name="title_home">Inicio</string>
     <string name="title_search">Buscar</string>
+    <string name="title_ranking">Ranking</string>
     <string name="title_profile">Perfil</string>
     <string name="email">Correo electrónico</string>
     <string name="username">Usuario</string>
