--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -21,3 +21,7 @@ TODO:
     - Logros cambiarlo para que ponga si es premio a foto o a user???
 
     - Doble click en Perfil antes de que carguen las fotos ---> peta
+
+    - Fotos duplicadas (en el grid perfil) porque adapter no carga bien
+    - Home fragment foto hacerla más grande porque tenemos espacio sin ocupar (entre los botones y la
+      foto)
