--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="no">No</string>
 
     <string name="select_photo">Elegir imagen</string>
-    <string name="upload_photo">Subir imagen</string>
+    <string name="upload_photo">Aceptar</string>
 
     <string name="image_description">Descripción</string>
     <string name="image_location">Ubicación</string>
