--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -6,6 +6,8 @@ TODO:
 
     - Home fragment bajar viewpic y botones (demasiado espacio en blanco)
 
+    - Ordenar fotos de perfil (mas likes o orden de subida)
+
     - Fotos giradas ¿?¿?¿?¿?
     - Coque achatado ????
     - Logros cambiarlo para que ponga si es premio a foto o a user???
