--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -63,5 +63,8 @@
     <string name="delete_accound_message_confirmation">Account successfully deleted</string>
     <string name="profile_pic_changed_message">Profile picture updated successfully</string>
 
-
+    <string name="authentication_failed">Authentication failed. Check your credentials</string>
+    <string name="fail_getting_profile_pic">There was an error loading the profile photo. Try again in a few minutes</string>
+    <string name="accept">Accept</string>
+    <string name="cancel">Cancelar</string>
 </resources>
