Cambios varios definidos en descripcion
Location añadida en signup y en Usuario.class
Foto de perfil predeterminada modificada
Foto de perfil en ProfileFragment ya aparece
Quitado botón de logros en SearchFragment

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -68,5 +68,7 @@
     <string name="accept">Accept</string>
     <string name="cancel">Cancelar</string>
 
+    <string name="location_hint">Location</string>
+
     <string name="passwords_do_not_match">Passwords do not match. Try again.</string>
 </resources>
