--- a/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
+++ b/app/src/main/java/snaprank/example/labdadm/snaprank/TODO.txt
@@ -1,20 +1,24 @@
 
 TODO:
 
-    - Logros cambiarlo para que ponga si es premio a foto o a user???
-
-    - ViewPic escalar la foto mejor
-
+Para el commit
+{
     - Cuando cambias de categoria y no hay fotos, peta
-
-    - Arreglar: darle a ranking usuario -> ir a perfil -> volver con el back (peta el xml de ranking)
-
     - Toast cuando intentas subir una foto sin tener una foto seleccionada (darle feedback al usuario)
+}
 
-    - Comentar lo de los logros (quitarlos?)
+Tengo que hacer despues de comer:
 
-    - Cuando te creas una cuenta añadir la localización
+    - Permitir el cambio de nombredeusuario y localización (comprobar que no está el nombre cogido)
+
+
+Lo que queda por hacer:
+    - Hacer capturas de logros para la presentación y quitarlo
 
     - Arreglar error de storage exception
 
     - Que no te deje crear 2 usuarios con el mismo email (te sale un mensaje como que la autentificación es erronea, pero entra a la aplicación)
+
+    - Que se pueda clicar t0do el cardview en el search, no solo la imagen
+
+    - Cambiar el navigation bar de settings que sigue en verde
